ingresses/basic-auth/ingress_whoami_basic_auth.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-ingress-basic-auth
  namespace: default
spec:
  entryPoints:
    - http-ep
  routes:
  - match: Host(`whoami.localhost.test`)
    kind: Rule
    services:
      - name: whoami
        port: 80
    middlewares:
      - name: basic-auth
